point to billings and fixing xaml compile

--- a/Wheres My Well/Wheres My Well/Wheres_My_Well/Wheres_My_Well.csproj
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well/Wheres_My_Well.csproj
@@ -50,7 +50,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Views\MainPage.xaml">
       <SubType>Designer</SubType>
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
     <EmbeddedResource Include="App.xaml">
       <SubType>Designer</SubType>
