--- a/Wheres My Well/Wheres My Well/Wheres_My_Well.UWP/project.json
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well.UWP/project.json
@@ -1,8 +1,10 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Xamarin.Forms": "2.3.4.267",
-    "Xamarin.Forms.Maps": "2.3.4.267"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
+    "Newtonsoft.Json": "10.0.2",
+    "WindowsAzure.Storage": "8.4.0",
+    "Xamarin.Forms": "2.3.4.270",
+    "Xamarin.Forms.Maps": "2.3.4.270"
   },
   "frameworks": {
     "uap10.0.10586": {}
