--- a/Wheres My Well/Wheres My Well/Wheres_My_Well/packages.config
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well/packages.config
@@ -1,5 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="2.3.4.267" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Xamarin.Forms.Maps" version="2.3.4.267" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.IO" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Linq" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Spatial" version="5.8.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Threading" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="WindowsAzure.Storage" version="8.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms.Maps" version="2.3.4.270" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
