--- a/Wheres My Well/Wheres My Well/Wheres_My_Well.Android/packages.config
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well.Android/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="monoandroid71" />
   <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="monoandroid71" />
@@ -54,6 +55,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="Unity" version="4.0.1" targetFramework="monoandroid71" />
   <package id="WindowsAzure.Storage" version="8.4.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
