--- a/Wheres My Well/Wheres My Well/Wheres_My_Well.iOS/packages.config
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well.iOS/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="xamarinios10" />
   <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="xamarinios10" />
@@ -54,6 +55,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Unity" version="4.0.1" targetFramework="xamarinios10" />
   <package id="WindowsAzure.Storage" version="8.4.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.Maps" version="2.3.4.270" targetFramework="xamarinios10" />
