--- a/Wheres My Well/Wheres My Well/Wheres_My_Well/packages.config
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
@@ -28,6 +29,7 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="WindowsAzure.Storage" version="8.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms.Maps" version="2.3.4.270" targetFramework="portable45-net45+win8+wp8+wpa81" />
