--- a/Wheres My Well/Wheres My Well/Wheres_My_Well.Android/packages.config
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well.Android/packages.config
@@ -8,6 +8,8 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="monoandroid71" />
+  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid71" />
+  <package id="Syncfusion.Xamarin.SfAutoComplete" version="15.3.0.29" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
