--- a/Wheres My Well/Wheres My Well/Wheres_My_Well.UWP/project.json
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well.UWP/project.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
     "Newtonsoft.Json": "10.0.2",
+    "Rg.Plugins.Popup": "1.0.4",
+    "Syncfusion.Xamarin.SfAutoComplete": "15.3.0.29",
     "Unity": "4.0.1",
     "WindowsAzure.Storage": "8.4.0",
     "Xamarin.Forms": "2.3.4.270",
