--- a/Wheres My Well/Wheres My Well/Wheres_My_Well/packages.config
+++ b/Wheres My Well/Wheres My Well/Wheres_My_Well/packages.config
@@ -6,6 +6,8 @@
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Syncfusion.Xamarin.SfAutoComplete" version="15.3.0.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
